[tool.poetry]
name = "penguin-analyst-boaz"
version = "0.1.1"
description = ""
authors = ["Boaz <boazbokek@gmail.com>"]
readme = "README.md"
packages = [{include = "penguin_analyst_boaz"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
